# Unility

./: .gitignore  .pyproject.toml.swp  README.md  pyproject.toml
Orca_template/NEB (g-xTB)/: traj.inp
Orca_template/NEB (xtb, geodesic interpolate)/: traj.inp
Orca_template/NEB-TS (xtb-ORCA)/: 01_NEB.inp  02_TS.inp  03_IRC.inp
Orca_template/S304.NEB-TS (xtb-ORCA)/: 01_NEB.inp  02_TS.inp  03_IRC.inp  end.xyz
Orca_template/Topsin2anmr_Carbon/: procs  topspin2anmr.py
Orca_template/Tospin2anmr/: 1r  jcamp_dx_topspin2anmr.py  jdx2anmr.py  proc  procs  topspin2anmr.py
Orca_template/Tospin2anmr_Carbon/: 1r  topspin2anmr.py
PES-orca/: template.inp
PES-xtb/: 2Atom.sh  PES_plot.py  PES_xtb.py  traj.xyz  xtbscan.xyz
src/: (pending)TsCNMR.py  BOBYQA.py  FactorAnalysis.py  FactorCompare.py  anmr.py  datNormalized.py  ensoGenFlexible.py  molManipulate.py  molclus_orca.py  nmrplotSJ.py  plot_2D_exp.py  plot_2D_sim.py  plot_HSQC.py  xyzGenFlexible.py  xyzReturnOandZ.py  xyzSerial.py  xyzSplit.py  xyzTranslate.py
src/Tools/: anmrfile.py  factor.py  (+7 more)
tests/: (pending)test_Exec.py  (pending)test_Tools.py  Pending_test_dat2BOBYQA.py  test_BOBYQA.py  test_FactorAnalysis.py  test_FactorCompare.py  test_anmr.py  test_cregen.py  test_dat2BOBYQA.py  test_datNormalized.py  test_ensoAnalysis.py  test_ensoGenFlexible.py  test_molManipulate.py  test_molclus_gxtb.py  test_molclus_orca.py  test_molclus_tblite_xtb.py  test_molclus_thermo.py  test_molclus_xtb.py  test_xyzGenFlexible.py  test_xyzReturnOandZ.py  test_xyzSerial.py  test_xyzSpit.py  test_xyzSplit.py  test_xyzTranslate.py
(+533 files in other folders)
