[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = [
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[project]
name = "censo_extension"
version = "0.0.1"
dependencies = [
    "requests",
    "icecream",
    "numpy",
    "scipy",
    "ase",
    "pointgroup",
    "graph-theory",
    "nmrglue",
    "nmrsim",
    "pyberny",
    "tblite",
    "tqdm",
]
